--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -14,19 +12,6 @@ services:
     ports:
       - "8080:80" 
 
-  db:
-    image: mysql:5.7
-    container_name: mysql_db
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel_db
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
-    volumes:
-      - db_data:/var/lib/mysql
-    networks:
-      - laravel-network
-
   mockoon:
     image: mockoon/cli:latest
     container_name: mockoon_server
@@ -38,8 +23,13 @@ services:
     networks:
       - laravel-network
 
-volumes:
-  db_data:
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - laravel-network
 
 networks:
   laravel-network:
